fix for close button not showing was to separate it from menu overlay component and fix it to page

--- a/components/Menu/styles.module.css
+++ b/components/Menu/styles.module.css
@@ -6,10 +6,10 @@
   width: 100%;
   max-height: 100vh;
   background-color: rgba(20, 20, 20, 0.9);
-  backdrop-filter: blur(25px);
+  backdrop-filter: blur(60px);
   flex-direction: column;
   opacity: 0;
-  transition: opacity 400ms ease;
+  transition: opacity 400ms ease, backdrop-filter 400ms ease;
   top: 0;
 }
 
